examples/test/testpolicy17344.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17344
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key6: value34
      key26: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value4
      podSelector:
        matchLabels:
          key37: value36
          key2: value7
